syntax = "proto3";

package file_transfer_request;

// Go Bindings Generations
option go_package = "schema/file_transfer_request";

//Services
service FileTransferRequestService {
  rpc UploadRequest(UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest{}

message UploadFileResponse{
  string address = 1;
}

// protoc --go_out=. --go-grpc_out=.  ./schema/file_transfer_request/file_transfer_request.proto
